--- a/SDL_GetSurfaceBlendMode.mediawiki
+++ b/SDL_GetSurfaceBlendMode.mediawiki
@@ -18,7 +18,7 @@ int SDL_GetSurfaceBlendMode(SDL_Surface*   surface,
 |the [[SDL_Surface]] structure to query
 |-
 |'''blendMode'''
-|a pointer filled in with the current [[SDL_BlendMode]] ,,enumeration,, ^value^; see [[#Remarks|Remarks]] for details
+|a pointer filled in with the current [[SDL_BlendMode]]; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
@@ -30,7 +30,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-'''blendMode''' may be SDL_BLENDMODE_NONE or a mask of any of the other [[SDL_BlendMode]] values OR'd together: <<Include(SDL_BlendMode, , , from="== Values ==", to="== Code Examples ==")>>
+'''blendMode''' can be one of these values: <<Include(SDL_BlendMode, , , from="== Values ==", to="== Code Examples ==")>>
 
 == Related Functions ==
 :[[SDL_SetSurfaceBlendMode]]
