update content - w/ Sam

--- a/SDL_DisplayMode.mediawiki
+++ b/SDL_DisplayMode.mediawiki
@@ -9,7 +9,7 @@ A structure that describes a display mode.
 {|
 |Uint32
 |'''format'''
-|,,an enumerated pixel format; see,, one of the [[SDL_PixelFormatEnum]] values; see [[#Remarks|Remarks]] for details
+|one of the [[SDL_PixelFormatEnum]] values; see [[#Remarks|Remarks]] for details
 |-
 |int
 |'''w'''
@@ -34,7 +34,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-'''format''' can be one of these values:
+'''format''' can be one of the following:
 <<Include(SDL_PixelFormatEnum, , , from="=== Pixel Format Values ===", to="== Code Examples ==")>>
 
 == Related Functions ==
