--- a/SDL_BlitSurface.mediawiki
+++ b/SDL_BlitSurface.mediawiki
@@ -17,16 +17,16 @@ int SDL_BlitSurface(SDL_Surface* src,
 == Function Parameters ==
 {|
 |'''src'''
-|the [[SDL_Surface]] structure containing '''srcrect''' / the source rectangle
+|the [[SDL_Surface]] structure to be copied from
 |-
 |'''srcrect'''
-|the [[SDL_Rect]] structure ^representing / describing^ ,,containing,, the source pixels
+|the [[SDL_Rect]] structure representing the rectangle to be copied, or NULL to copy the entire surface
 |-
 |'''dst'''
-|the [[SDL_Surface]] structure containing '''dstrect''' / the destination rectangle
+|the [[SDL_Surface]] structure that is the blit target
 |-
 |'''dstrect'''
-|the [[SDL_Rect]] structure to be filled ^with / by the blit^
+|the [[SDL_Rect]] structure representing the rectangle that is copied into
 |}
 
 == Return Value ==
