--- a/SDL_WasInit.mediawiki
+++ b/SDL_WasInit.mediawiki
@@ -53,7 +53,7 @@ else
 ```
 
 == Remarks ==
-<span id="flags"></span>These are the flags which may be passed to [[SDL_WasInit]]() and may be OR'd together to query multiple, specific subsystems simultaneously. 
+<span id="flags"></span>These are the flags which may be passed to [[SDL_WasInit]]() and may be OR'd together to query multiple subsystems simultaneously. 
 
 <<Include(SDL_Init, , , from="OR'd together:", to="Unless the")>>
 
