--- a/SDL_DisplayMode.mediawiki
+++ b/SDL_DisplayMode.mediawiki
@@ -34,7 +34,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-'''format''' can be one of the following:
+'''format''' may be one of the following:
 <<Include(SDL_PixelFormatEnum, , , from="=== Pixel Format Values ===", to="== Code Examples ==")>>
 
 == Related Functions ==
