--- a/SDL_PixelFormatEnumToMasks.mediawiki
+++ b/SDL_PixelFormatEnumToMasks.mediawiki
@@ -45,7 +45,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-'''format''' can be one of these values:
+'''format''' may be one of the following:
 <<Include(SDL_PixelFormatEnum, , , from="=== Pixel Format Values ===", to="== Code Examples ==")>>
 
 == Related Functions ==
