--- a/SDL_QueryTexture.mediawiki
+++ b/SDL_QueryTexture.mediawiki
@@ -42,7 +42,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-<span id="format"></span> '''format''' can be one of these values:
+<span id="format"></span> '''format''' may be one of the following:
 <<Include(SDL_PixelFormatEnum, , , from="=== Pixel Format Values ===", to="== Code Examples ==")>>
 
 == Related Functions ==
