--- a/SDL_GL_GetAttribute.mediawiki
+++ b/SDL_GL_GetAttribute.mediawiki
@@ -29,7 +29,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-'''attr''' can be one of these values:
+'''attr''' may be one of the following:
 <<Include(SDL_GLattr, , , from="== Values ==", to="== Code Examples ==")>>
 
 == Related Functions ==
