--- a/SDL_ConvertPixels.mediawiki
+++ b/SDL_ConvertPixels.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_ConvertPixels =
 Use this function to copy a block of pixels of one format to another format.
@@ -27,19 +26,19 @@ int SDL_ConvertPixels(int         width,
 |the height of the block to copy, in pixels
 |-
 |'''src_format'''
-|the format of the source pixels, in bits
+|an [[SDL_PixelFormatEnum]] value for the source
 |-
 |'''src'''
-|,,a pointer to,, the source pixels
+|a pointer to the source pixels
 |-
 |'''src_pitch'''
 |the pitch of the block to copy
 |-
 |'''dst_format'''
-|the format of the destination pixels, in bits
+|an [[SDL_PixelFormatEnum]] value for the destination
 |-
 |'''dst'''
-|^a pointer to ^be filled with new pixel data
+|a pointer to be filled in with new pixel data
 |-
 |'''dst_pitch'''
 |the pitch of the destination pixels
