--- a/SDL_ConvertPixels.mediawiki
+++ b/SDL_ConvertPixels.mediawiki
@@ -26,7 +26,7 @@ int SDL_ConvertPixels(int         width,
 |the height of the block to copy, in pixels
 |-
 |'''src_format'''
-|an [[SDL_PixelFormatEnum]] value for the source
+|the format of the source pixels; see [[#Remarks|Remarks]] for details
 |-
 |'''src'''
 |a pointer to the source pixels
@@ -35,7 +35,7 @@ int SDL_ConvertPixels(int         width,
 |the pitch of the block to copy
 |-
 |'''dst_format'''
-|an [[SDL_PixelFormatEnum]] value for the destination
+|the format of the destination pixels; see [[#Remarks|Remarks]] for details
 |-
 |'''dst'''
 |a pointer to be filled in with new pixel data
@@ -53,7 +53,8 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+'''src_format''' and '''dst_format''' may be one of the following [[SDL_PixelFormatEnum]] values:
+<<Include(SDL_PixelFormatEnum, , , from="=== Pixel Format Values ===", to="== Code Examples ==")>>
 
 == Related Functions ==
 
