--- a/SDL_ConvertPixels.mediawiki
+++ b/SDL_ConvertPixels.mediawiki
@@ -53,10 +53,9 @@ You can add your code example here
 ```
 
 == Remarks ==
-'''src_format''' and '''dst_format''' may be one of the following [[SDL_PixelFormatEnum]] values:
+'''src_format''' and '''dst_format''' may each be one of the following [[SDL_PixelFormatEnum]] values:
 <<Include(SDL_PixelFormatEnum, , , from="=== Pixel Format Values ===", to="== Code Examples ==")>>
 
-== Related Functions ==
 
 ----
 [[CategoryAPI]], [[CategorySurface]]
