--- a/SDL_ConvertSurface.mediawiki
+++ b/SDL_ConvertSurface.mediawiki
@@ -23,7 +23,7 @@ SDL_Surface* SDL_ConvertSurface(SDL_Surface*     src,
 |the [[SDL_PixelFormat]] structure that the new surface is optimized for
 |-
 |'''flags'''
-|unused; set to 0
+|the flags are unused and should be set to 0
 |}
 
 == Return Value ==
