--- a/SDL_CreateRGBSurfaceFrom.mediawiki
+++ b/SDL_CreateRGBSurfaceFrom.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_CreateRGBSurfaceFrom =
-Use this function to allocate ,,and free,, an RGB surface ^from pixels???^.
+Use this function to allocate a new RGB surface with existing pixel data.
 
 
 == Syntax ==
@@ -22,19 +21,19 @@ SDL_Surface* SDL_CreateRGBSurfaceFrom (void*  pixels,
 == Function Parameters ==
 {|
 |'''pixels'''
-|a pointer to a set of pixels to use on the surface
+|a pointer to existing pixel data
 |-
 |'''width'''
-|the width of the surface ^(in pixels)^
+|the width of the surface
 |-
 |'''height'''
-|the height of the surface ^(in pixels)^
+|the height of the surface
 |-
 |'''depth'''
 |the depth of the surface in bits; see [[#Remarks|Remarks]] for details
 |-
 |'''pitch'''
-|the pitch of the pixels
+|the length of a row of pixels in bytes
 |-
 |'''Rmask'''
 |the red mask for the pixels
@@ -50,7 +49,7 @@ SDL_Surface* SDL_CreateRGBSurfaceFrom (void*  pixels,
 |}
 
 == Return Value ==
-Returns a pointer to ,,an,, ^the^ [[SDL_Surface]] structure ,,to be,, ^that is^ created.  If the function runs out of memory it will return NULL. 
+Returns the new [[SDL_Surface]] structure that is created or NULL if it fails; call [[SDL_GetError]]() for more information.  
 
 == Code Examples ==
 ```c++
@@ -58,13 +57,9 @@ You can add your code example here
 ```
 
 == Remarks ==
-If ,,the,, '''depth''' is 4 or 8 bits, an empty palette is allocated for the surface. If ,,the,, '''depth''' is greater than 8 bits, the pixel format is set using the flags '[RGB]mask'. <<Color2(green,Should it still mention flags since there is no flag param in this function?  Should it instead say using the source pixel format?)>>
+<<Include(SDL_CreateRGBSurface, , , from="== Remarks ==", to="== Related Functions ==")>>
 
-*<br/>No copy is made from the pixel data. A special undocumented [[SDL_Surface]] flag is set. The pixel data won't be deallocated automatically when [[SDL_FreeSurface]]() is invoked with the surface and it should not be freed until the surface has been freed. The data stored in '''pixels''' is assumed to have '''depth''' bits per pixel. '''pitch''' is the size of the scanline of the surface, in bytes (i.e. <code>widthInPixels*bytesPerPixel</code>). The scanline is the width of the image multiplied by bytes per pixel, plus any bytes added for alignment (that is if '''pixels''' points to the leftmost pixel on the first row of the surface, then '''pixels'''+'''pitch''' points to the leftmost pixel on the second row of the surface).
-
-<<Color2(green,If the above text is to remain should words like scanline be formatted differently - like <code>scanline</code>?)>>
-
-The pixel data is considered to be in software memory. If the pixel data lies in hardware memory (as pixel data from a hardware surface), the appropriate surface flag has to be set manually. <br/>*
+No copy is made of the pixel data. You should not free the pixel data until you have freed the surface.  The pixel data won't be freed automatically when the surface is freed.
 
 == Related Functions ==
 :[[SDL_CreateRGBSurface]]
