--- a/SDL_GetWindowFlags.mediawiki
+++ b/SDL_GetWindowFlags.mediawiki
@@ -17,7 +17,7 @@ Uint32 SDL_GetWindowFlags(SDL_Window* window)
 |}
 
 == Return Value ==
-Returns the [[SDL_WindowFlags]] associated with '''window'''; see [[#Remarks|Remarks]] for details.
+Returns a mask of the [[SDL_WindowFlags]] associated with '''window'''; see [[#Remarks|Remarks]] for details.
 
 == Code Examples ==
 ```c++
