--- a/SDL_SetClipRect.mediawiki
+++ b/SDL_SetClipRect.mediawiki
@@ -21,7 +21,7 @@ SDL_bool SDL_SetClipRect(SDL_Surface*    surface,
 |}
 
 == Return Value ==
-If the clip rectangle doesn't intersect the surface, the function will return SDL_FALSE and blits will be completely clipped. Otherwise the function returns SDL_TRUE and blits to the surface will be clipped to the intersection of the surface area and the clipping rectangle.
+Returns SDL_TRUE if the rectangle intersects the surface or SDL_FALSE and blits will be completely clipped if not.
 
 == Code Examples ==
 ```c++
