--- a/SDL_SetSurfaceAlphaMod.mediawiki
+++ b/SDL_SetSurfaceAlphaMod.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_SetSurfaceAlphaMod =
 Use this function to set an additional alpha value used in blit operations.
@@ -30,10 +29,12 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+When a surface is blitted, during the blit operation the source alpha value is modulated by this alpha value according to the following formula:
+:<code>srcA = srcA * alpha</code>
 
 == Related Functions ==
 :[[SDL_GetSurfaceAlphaMod]]
+:[[SDL_SetSurfaceColorMod]]
 
 ----
 [[CategoryAPI]], [[CategorySurface]]
