--- a/SDL_SetSurfaceAlphaMod.mediawiki
+++ b/SDL_SetSurfaceAlphaMod.mediawiki
@@ -29,8 +29,8 @@ You can add your code example here
 ```
 
 == Remarks ==
-When a surface is blitted, during the blit operation the source alpha value is modulated by this alpha value according to the following formula:
-:<code>srcA = srcA * alpha</code>
+When this surface is blitted, during the blit operation the source alpha value is modulated by this alpha value according to the following formula:
+:<code>srcA = srcA * (alpha / 255)</code>
 
 == Related Functions ==
 :[[SDL_GetSurfaceAlphaMod]]
